<resources>
    <string name="app_name">Calculator</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="divide">"\u00f7"</string>
    <string name="multiply">"\u00D7"</string>
    <string name="period">.</string>
    <string name="clear">c</string>
    <string name="equals">=</string>
    <string name="defaultScreen"/>
    <string name="defaultCalcScreen"/>
    <string name="square">x"\u00B2"</string>
    <string name="pi">"\u03C0"</string>
    <string name="square_root">"\u221a"</string>



</resources>
